# pstyle

./: .gitignore  CMakeLists.txt  README.md  colors.h  makefile  minifmt.c  minifmt.h  pstyle.c  pstyle.h  pstyle.in.h
lib/: colors.h
